# rusql2py

./: .gitignore  Cargo.toml  README.md  pyproject.toml  rusql2py.pyi  test.db  test.py
src/: lib.rs
