[package]
name = "rusql2py"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusql2py"
rusqlite = { version = "0.29.0", features = ["bundled"] }

[dependencies]
rusqlite = "0.29.0"

[dependencies.pyo3]
pyo3 = "0.18.2"
features = ["extension-module"]
